proc-macro-error/test-crate/tests/ui/dummy.stderr
error: set_dummy test
 --> $DIR/dummy.rs:9:10
  |
9 | make_fn!(need_default);
  |          ^^^^^^^^^^^^
